style.css
/* ... */
h2 {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
  margin-bottom: 3%;
}

.socials {
  position: relative;
  top: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 10%;
  height: 1.2rem;
  list-style: none;
  flex-grow: 0;
  padding-bottom: 10rem;
}

li img {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin-right: 1rem;
}

.snap img {
  width: 100%;
  position: relative;
}

.gb-img img {
  width: 100%;
}

.lis img {
  margin-right: 0.2rem;
}

.socials li a img {
  padding: 0 12px;
  transition: transform 1s 0.3s;
}

.skills ul {
  list-style: none;
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
  line-height: 1;
}

.skills ul li {
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #7a869a;
  margin-right: 0.5rem;
  font-style: normal;
}

.tech ul li {
  margin-right: 2rem;
  background: #ebebff;
  border-radius: 8px;
  align-items: center;
  padding: 4px 12px;
  font-weight: 500;
  font-size: 12px;
  color: #6070ff;
}

.social li a img {
  padding: 0 15px;
  transform: translateX(-23%);
  transition: transform 0.1s;
  margin: 0;
}

.card-container {
  display: grid;
  grid-template-columns: 1fr;
  background-color: #fff;
  border-radius: 10px;
  padding: 6%;
  border: 1px solid #dfe1e6;
  font-family: 'Poppins', sans-serif;
  margin-bottom: 3rem;
}

.skills .canopy {
  font-size: 15px !important;
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  color: #344563;
}

.contents {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.contents h3 {
  margin: 1rem 0;
}

.contents .skills {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

.div {
  margin: 6px;
}

li .div {
  background-color: #ebebff;
  width: 10px;
  height: 10px;
  border-radius: 50%;
}

.skills .div {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: #c1c7d0;
  margin-left: 0.6rem;
}

.heading {
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
}

.contents .heading2 {
  font-weight: 400;
  color: #344563;
  font-size: 16px;
}

.tech {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 1rem;
}

.contents .tech {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

.tech ul {
  list-style: none;
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

.tech ul li:hover {
  background-color: #396df2;
  color: #fff;
}

.btns {
  border: 1px solid #396df2;
  padding: 0.8rem 0.8rem;
  background-color: transparent;
  border-radius: 8px;
  color: #396df2;
  font-weight: 500;
  font-size: 17px;
  letter-spacing: 0.03em;
  font-family: 'Poppins', sans-serif;
  margin: 0.5rem 0;
  cursor: pointer;
}

.btn-b {
  display: inline-block;
  margin-top: 3rem;
  text-decoration: none;
  font-weight: 500;
  font-size: 17px;
  color: #396df2;
  border: 1px solid #6070ff;
  border-radius: 8px;
  padding: 12px;
}

.btns:hover,
.btn-b:hover {
  color: #fff;
  background: #6070ff;
}

.active:active {
  background: #2230d2;
  color: #fff;
}

.work {
  display: grid;
  grid-template-rows: 1fr;
  gap: 6rem;
  background: #f7f7f9;
  padding: 20% 6%;
}

.about-container {
  background: #f7f7f9;
  padding-top: 2.5rem;
}

.about {
  background-color: #fff;
  padding: 10%;
  border-radius: 0 5rem 0 0;
  display: flex;
  flex-direction: column;
}

.about-h1 {
  font-family: 'Poppins', sans-serif;
  margin-bottom: 1rem;
  color: #091e42;
  font-weight: 700;
  font-size: 40px;
  transform: translateY(28%);
  margin-top: 2rem;
}

.about-p {
  margin-top: 1.5rem;
  color: #344563;
  font-weight: 400;
  font-size: 16px;
}

.connect {
  color: #6070ff;
  margin: 0.5rem 0;
  font-weight: 500;
  font-size: 16px;
}

.social {
  position: relative;
  top: 20px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 1%;
  height: 1.2rem;
  list-style: none;
  flex-grow: 0;
}

li .imgs {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin-right: 0;
  padding: 0;
  margin-left: 0;
}

.techs .lis {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0.6rem;
  margin: 0.5rem;
  background-color: #ebebee;
  border-radius: 12px;
  color: #253858;
  width: 50%;
  font-weight: 600;
}

.langs {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  margin-top: -1rem;
}

.langs p {
  transform: translateX(-32%);
}

.langs span {
  margin-right: 10px;
  margin-left: 4px;
  font-size: 12px;
  color: #7a869a;
  font-weight: normal;
  font-family: 'Poppins', sans-serif;
}

.under-lines {
  padding: 1.5rem 0;
  border-bottom: 2px solid #e5e5e5;
  width: 100%;
}

.under-lines:nth-child(1) {
  border-bottom: none;
}

.solid {
  position: absolute;
  right: 0;
  cursor: pointer;
}

.fas-circle {
  background-color: #7a869a;
}

.container-b {
  font-family: 'Poppins', sans-serif;
  max-width: 768px;
  border-radius: 0 20px 0 0;
}

.bg-b {
  background-color: #fff;
  padding: 5%;
  border-radius: 0 60px 0 0;
}

.about-h1-b {
  font-family: 'Poppins', sans-serif;
  margin-bottom: 0.5rem;
  font-weight: 700;
  font-size: 45px;
  line-height: 1;
  color: #172b4d;
  margin-top: 3rem;
}

.about-p-b {
  margin-top: 1.5rem;
  font-weight: 400;
  font-size: 16px;
  color: #344563;
}

.connect-b {
  color: #6070ff;
  margin: 0.5rem 0;
  font-size: 15px;
  font-weight: 400;
}

.techs .liss {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0.6rem;
  margin: 0.5rem;
  background-color: #ebebee;
  border-radius: 12px;
  color: #253858;
  width: 100%;
  font-weight: 600;
}

.liss .imgs {
  margin-right: 1rem;
}

.solids {
  position: absolute;
  left: 89%;
  cursor: pointer;
  font-size: 16px;
}
/* ... */

